gramnuri/k8s/overlays/dev/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gramnuri-api
spec:
  selector:
    matchLabels:
      app: gramnuri-api
  template:
    spec:
      containers:
      - name: gramnuri-api
